# Binary_Pairwise_Pareto_Syn

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: arena_like.yaml  confidence_scaling_quantile.yaml  constants_calibration.yaml  correlated_arena.yaml  fixed_budget_benchmarks.yaml  fixed_confidence_benchmarks.yaml  fixed_confidence_scaling.yaml  mle_ablation.yaml  pareto_size_ablation.yaml  smoke.yaml  theory_constants_sanity.yaml  under_budget_stress.yaml
results/: README.md
scripts/: generate_allocation_diagnostic.py  replace_experiment_rows.py  run_all_smoke.sh  run_main_benchmarks.sh
tests/: test_algorithms.py  test_bt_mle.py  test_core.py  test_gaps.py  test_instances.py  test_metrics.py  test_paired_metrics.py  test_run_sweep.py
vb_ege/: __init__.py  algorithms.py  baselines.py  bt_mle.py  compat.py  core.py  gaps.py  instances.py  io_utils.py  metrics.py  plotting.py  run_single.py  run_sweep.py  summarize.py
